--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ p{
   right: -1px;
   width: 100px;
   font-size: 1.25em;
+  color: white;
   border: 1px solid black;
 }
 .sec{
@@ -37,25 +38,22 @@ p{
   margin:auto;
 }
 .chicken{
-  background-color: #FBDDA2;
+  background-color: #F2FBA2;
 }
 .chicken > .sec_title{
-  background-color: #B95208;
-  color: white;
+  background-color: #B77300;
 }
 .beef{
   background-color: #F8BDBD;
 }
 .beef > .sec_title{
-  background-color: #DC6673;
-  color: #8D1A1A;
+  background-color: #CB1D30;
 }
 .sushi{
   background-color: #C5FDEC;
 }
 .sushi > .sec_title{
   background-color: #107A54;
-  color: white;
 }
 
 /* For Desktop */
